# Movie-platform

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  pytest.ini
requirements/: base.txt  devlopment.txt  production.txt
src/apps/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/common/: exceptions.py  pagination.py
src/apps/integrations/mongodb/: _init_.py  client.py  repository.py  sync.py  tasks.py
src/apps/integrations/tmdb/: client.py  exceptions.py  schemas.py  tasks.py
src/apps/integrations/tmdb/tests/: test_client.py  test_tasks.py
src/apps/movies/: _init_.py  admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
src/apps/movies/migrations/: 0001_initial.py
src/apps/movies/repositories/: movie_repository.py
src/apps/movies/tests/: factories.py  test_views.py
src/core/: celery.py  urls.py
src/core/settings/: base.py  celery_config.py  development.py  mongodb_config.py  production.py
src/reporting_api/: config.py  dependencies.py  health.py  main.py
src/reporting_api/routers/: health.py  movies.py
src/reporting_api/schemas/: movies.py
src/reporting_api/services/: analytics_service.py
src/reporting_api/tests/: test_endpoints.py
